--- a/src/App.css
+++ b/src/App.css
@@ -34,14 +34,12 @@
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
   height: 100vh;
-  /* width: 100vw; */
 }
 
 .video-view {
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
   flex-flow: row nowrap;
+  scroll-snap-type: x mandatory;
   scroll-snap-align: start;
   width: 100%;
   height: auto;
@@ -53,7 +51,6 @@
 }
 
 .video-info-container {
-  display: block;
   scroll-snap-type: x mandatory;
   height: 100vh;
   min-width: 100vw;
